修改离职申请流程

--- a/EmpInfo/EmpInfo.csproj
+++ b/EmpInfo/EmpInfo.csproj
@@ -310,6 +310,9 @@
     <Compile Include="Models\ei_event_log.cs">
       <DependentUpon>InfoDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ei_flowAuthority.cs">
+      <DependentUpon>InfoDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ei_groupAuthority.cs">
       <DependentUpon>InfoDB.tt</DependentUpon>
     </Compile>
@@ -1276,6 +1279,8 @@
     <Content Include="Views\Apply\BeginAuditSPApply.cshtml" />
     <Content Include="Views\Report\SPReport.cshtml" />
     <Content Include="Views\Admin\AuditorSetting.cshtml" />
+    <Content Include="Views\ApplyExtra\ChargerUpdateLeaveDay.cshtml" />
+    <Content Include="Views\ApplyExtra\CancelJQApply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
