离职流程：当离职人和组长的人事部门不一致时，弹出对话框让申请人选择要哪个部门

--- a/EmpInfo/EmpInfo.csproj
+++ b/EmpInfo/EmpInfo.csproj
@@ -1259,8 +1259,8 @@
     <Content Include="Views\Report\UCReport.cshtml" />
     <Content Include="Views\Apply\ApplyIndex.cshtml" />
     <Content Include="Views\Apply\BeginApplyAL.cshtml" />
+    <Content Include="Views\Apply\GetMyApplyList.bak.cshtml" />
     <Content Include="Views\Apply\GetMyApplyList.cshtml" />
-    <Content Include="Views\Apply\GetMyALApplyList.cshtml" />
     <Content Include="Views\Apply\CheckALApply.cshtml" />
     <Content Include="Views\Apply\CheckFlowRecord.cshtml" />
     <Content Include="Views\Apply\GetMyAuditedList.cshtml" />
