--- a/EmpInfo/EmpInfo.csproj
+++ b/EmpInfo/EmpInfo.csproj
@@ -577,6 +577,13 @@
     <Compile Include="Models\vw_UCReport.cs">
       <DependentUpon>InfoDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\WxModels.cs" />
+    <Compile Include="Models\wx_accessToken.cs">
+      <DependentUpon>InfoDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\wx_jsApiTicket.cs">
+      <DependentUpon>InfoDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\wx_pushMsg.cs">
       <DependentUpon>InfoDB.tt</DependentUpon>
     </Compile>
@@ -607,6 +614,7 @@
     <Compile Include="Services\SVSv.cs" />
     <Compile Include="Services\TISv.cs" />
     <Compile Include="Services\UCSv.cs" />
+    <Compile Include="Services\WxSv.cs" />
     <Compile Include="Util\BillUtils.cs" />
     <Compile Include="Util\MyEmail.cs" />
     <Compile Include="Util\MyUtils.cs" />
@@ -1127,6 +1135,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\JsBarcode.code128.min.js" />
+    <Content Include="Scripts\jweixin-1.4.0.js" />
     <Content Include="Scripts\knockout-3.4.0.debug.js" />
     <Content Include="Scripts\knockout-3.4.0.js" />
     <Content Include="Scripts\lazysizes.min.js" />
@@ -1316,6 +1325,7 @@
     <Content Include="Views\Report\TIViewForGuard.cshtml" />
     <Content Include="Views\Report\TIReport.cshtml" />
     <Content Include="Views\Apply\BeginAuditSJApply.cshtml" />
+    <Content Include="Views\WX\GetLocation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
